<resources>
    <string name="app_name">Android Chat App</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up
    <string name="change_password">Change Password</string></string>
    <string name="change_email">Change Email</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register"> Click here to REGISTERED in firebase now </string>
    <string name="btn_link_to_login">Already registered. Login Now!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<-- Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your email in the box below and check your mail to reset your password!</string>
    <string name="post_title_edit_hint"> Title</string>
    <string name="bottom_view_date_label"> Day</string>
    <string name="bottom_view_time_label"> Time</string>
    <string name="bottom_view_color_label"> Color</string>
    <string name="bottom_view_delete_label">Delete</string>
    <string name="username">User name</string>
</resources>
